k8s/coma/apps/media/tdarr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
  namespace: media
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - tdarr.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tdarr-master-main
          port: 8265
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: tdarr-master-server
          port: 8266
